tests/parser-test-files/bad-files/parse-declare.1.error
error: Malformed declaration
  --> test:4:0
   |
 4 |  (declare)
   |  ^^^^^^^^^ expected body
