tests/parser-test-files/bad-files/parse-declare.1.coal
;; BAD: Invalid Declare
(package test-package)

(declare)
